[tool.poetry]
name = "qiipy"
version = "0.1.0"
description = ""
authors = ["sh1ma <in9lude@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apywrapper = "~=0.1.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
